reference-llvm/tests/should-fail/fail12.mu
// expression test -- arithmetic with boolean

function @entry foo() {
    true + false;
}
